--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <div class="flex-1">
                          <h4 class="font-semibold text-lg text-gray-800 mb-2">Payment Breakdown:</h4>
                          <ul class="space-y-2 text-gray-700">
-                            <li class="flex justify-between"><span>Interest-Only (P&I)</span> <span>$2,375.00</span></li>
+                            <li class="flex justify-between"><span>Interest-Only </span> <span>$2,375.00</span></li>
                             <li class="flex justify-between"><span>Homeowners Insurance (est.)</span> <span>$300.00</span></li>
                             <li class="flex justify-between border-b pb-2"><span>Property Taxes (est.)</span> <span>$750.00</span></li>
                             <li class="flex justify-between font-bold pt-2"><span>Total</span> <span>$3,425.00</span></li>
